force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/tc9_pr__Payee_Opening_Balance__c.object-meta.xml
<CustomObject>
    <label>Payee Opening Balance</label>
    <nameField>
        <displayFormat>POB-{0000000000}</displayFormat>
        <label>Payee Opening Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payee Opening Balances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>