force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_imp__External_Id_it__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__External_Id_it__c</fullName>
    <externalId>true</externalId>
    <label>External Id (it)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>