force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__Additional_PAYG_Deduction__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Additional_PAYG_Deduction__c</fullName>
    <label>Additional PAYG Deduction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>