force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__ATO_Income_Classification__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ATO_Income_Classification__c</fullName>
    <description>The associated ATO Income Classification for these earnings/withholdings.</description>
    <inlineHelpText>The associated ATO Income Classification for these earnings/withholdings.</inlineHelpText>
    <label>ATO Income Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__ATO_Income_Classification</valueSetName>
    </valueSet>
</CustomField>