force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__Country_of_Visa_Work__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Country_of_Visa_Work__c</fullName>
    <description>If blank, Australia will be used in downstream processes.</description>
    <inlineHelpText>If blank, Australia will be used in downstream processes.</inlineHelpText>
    <label>Country of Visa/Work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__STP2_Country_Picklists</valueSetName>
    </valueSet>
</CustomField>