force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Effective_Date__c</fullName>
    <description>The Effective Date is used to determine which Calendar Period the payee opening balance record should be included in payrun processing based on the Payee’s pay schedule.</description>
    <inlineHelpText>The Effective Date is used to determine which Calendar Period the payee opening balance record should be included in payrun processing based on the Payee’s pay schedule.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>