force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__Employee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Employee record</description>
    <inlineHelpText>The related Employee record</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payee Opening Balances</relationshipLabel>
    <relationshipName>Payee_Opening_Balances</relationshipName>
    <type>Lookup</type>
</CustomField>