force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__Employer_Additional_Super__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employer_Additional_Super__c</fullName>
    <description>Indicates that this is an employer additional superannuation Payee Opening Balance. The standard and additional components are tracked via separate Payee Aggregate records during the pay batch finalise process.</description>
    <inlineHelpText>Indicates that this is an employer additional superannuation Payee Opening Balance. The standard and additional components are tracked via separate Payee Aggregate records during the pay batch finalise process.</inlineHelpText>
    <label>Employer Additional Super</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>