force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__Exclude_From_Finalise__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Exclude_From_Finalise__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that confirmed payee opening balance record will be used during pay batch calculations but not included in the finalise process. Any MTD, QTD, YTD values will not be added to Payee Aggregates.</description>
    <inlineHelpText>Indicates that confirmed payee opening balance record will be used during pay batch calculations but not included in the finalise process. Any MTD, QTD, YTD values will not be added to Payee Aggregates.</inlineHelpText>
    <label>Exclude From Finalise</label>
    <type>Checkbox</type>
</CustomField>