force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__Leave_Balance_Units__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Leave_Balance_Units__c</fullName>
    <description>The cumulative balance for this leave rule</description>
    <inlineHelpText>The cumulative balance for this leave rule</inlineHelpText>
    <label>Leave Balance Units</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>