force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__Leave_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Leave_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Leave Rule the opening balance will be applied to</description>
    <inlineHelpText>The related Leave Rule the opening balance will be applied to</inlineHelpText>
    <label>Leave Rule</label>
    <referenceTo>tc9_pr__Leave_Rule__c</referenceTo>
    <relationshipLabel>Payee Opening Balances</relationshipLabel>
    <relationshipName>Payee_Opening_Balances</relationshipName>
    <type>Lookup</type>
</CustomField>