force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__Pay_Batch_Event__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated Pay Batch Event that causes this record to be included in the pay batch creation process.</description>
    <inlineHelpText>The associated Pay Batch Event that causes this record to be included in the pay batch creation process.</inlineHelpText>
    <label>Pay Batch Event</label>
    <referenceTo>tc9_pr__Pay_Batch_Event__c</referenceTo>
    <relationshipLabel>Payee Opening Balances</relationshipLabel>
    <relationshipName>Payee_Opening_Balances</relationshipName>
    <type>Lookup</type>
</CustomField>