force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__Pay_Batch_Item__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payee Pay Batch this payee opening balance was processed in.</description>
    <inlineHelpText>The Payee Pay Batch this payee opening balance was processed in.</inlineHelpText>
    <label>Payee Pay Batch Processed</label>
    <referenceTo>tc9_pr__Pay_Batch_Item__c</referenceTo>
    <relationshipLabel>Payee Opening Balances</relationshipLabel>
    <relationshipName>Payee_Opening_Balances</relationshipName>
    <type>Lookup</type>
</CustomField>