force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Pay Code record</description>
    <inlineHelpText>The related Pay Code record</inlineHelpText>
    <label>Pay Code</label>
    <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
    <relationshipLabel>Payee Opening Balances</relationshipLabel>
    <relationshipName>Payee_Opening_Balances</relationshipName>
    <type>Lookup</type>
</CustomField>