force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Payee record</description>
    <inlineHelpText>The related Payee record</inlineHelpText>
    <label>Payee</label>
    <referenceTo>tc9_pr__Payee__c</referenceTo>
    <relationshipLabel>Payee Opening Balances</relationshipLabel>
    <relationshipName>Payee_Opening_Balances</relationshipName>
    <type>Lookup</type>
</CustomField>