force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__Payee_Leave_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payee_Leave_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Payee Leave Rule.</description>
    <inlineHelpText>The related Payee Leave Rule.</inlineHelpText>
    <label>Payee Leave Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.tc9_pr__Payee__c</field>
            <operation>equals</operation>
            <valueField>tc9_pr__Payee_Leave_Rule__c.tc9_pr__Payee__c</valueField>
        </filterItems>
        <infoMessage>Please enter a wildcare of &quot;PLR&quot; to search all available payee leave rules</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Payee_Leave_Rule__c</referenceTo>
    <relationshipLabel>Payee Opening Balances</relationshipLabel>
    <relationshipName>Payee_Opening_Balances</relationshipName>
    <type>Lookup</type>
</CustomField>