force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__QTD_Units__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__QTD_Units__c</fullName>
    <description>The Quarter to Date number of occurrences of this particular pay code</description>
    <inlineHelpText>The Quarter to Date number of occurrences of this particular pay code</inlineHelpText>
    <label>QTD Units</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>