force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__Superannuation_Fund__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuation_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related superannuation fund for Employer and Employee contributions</description>
    <inlineHelpText>The related superannuation fund for Employer and Employee contributions</inlineHelpText>
    <label>Superannuation Fund</label>
    <referenceTo>tc9_pr__Superannuation_Fund__c</referenceTo>
    <relationshipLabel>Payee Opening Balances</relationshipLabel>
    <relationshipName>Payee_Opening_Balances</relationshipName>
    <type>Lookup</type>
</CustomField>