force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/fields/tc9_pr__YTD_Qualifying_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__YTD_Qualifying_Earnings__c</fullName>
    <description>The Year to Date Qualifying Earnings value carried on this Payee Opening Balance record.</description>
    <inlineHelpText>The Year-to-Date Qualifying Earnings to be included in the Australian Superannuation calculation, post 1 July 2026.</inlineHelpText>
    <label>YTD Qualifying Earnings</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>