force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/recordTypes/tc9_pr__Deduction.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Deduction</fullName>
    <active>true</active>
    <description>Used to define Opening Balances that should be considered as deductions during payrun calculation</description>
    <label>Deduction</label>
</RecordType>