force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/recordTypes/tc9_pr__Expense.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Expense</fullName>
    <active>true</active>
    <description>Used to define Opening Balances that should be considered as expenses during payrun calculation</description>
    <label>Expense</label>
</RecordType>