force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/recordTypes/tc9_pr__FBT.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__FBT</fullName>
    <active>true</active>
    <description>Used to define Opening Balances that should be considered as FBT during payrun calculation</description>
    <label>FBT</label>
</RecordType>