force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/recordTypes/tc9_pr__Leave.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Leave</fullName>
    <active>true</active>
    <description>Used to define Opening Balances that should be considered as leave balances during payrun calculation</description>
    <label>Leave</label>
</RecordType>