force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/recordTypes/tc9_pr__Lump_Sum.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Lump_Sum</fullName>
    <active>true</active>
    <description>Used to define Opening Balances that should be considered as lump sums during payrun calculation</description>
    <label>Lump Sum</label>
</RecordType>