force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/recordTypes/tc9_pr__Withholding_GST.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Withholding_GST</fullName>
    <active>true</active>
    <description>Used to define Opening Balances that should be considered as GST withholding during payrun calculation</description>
    <label>Withholding - GST</label>
</RecordType>