force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/recordTypes/tc9_pr__Withholding_HELP.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Withholding_HELP</fullName>
    <active>false</active>
    <label>Withholding - HELP</label>
</RecordType>