force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/recordTypes/tc9_pr__Withholding_PAYG.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Withholding_PAYG</fullName>
    <active>true</active>
    <description>Used to define Opening Balances that should be considered as PAYG withholding during payrun calculation</description>
    <label>Withholding - PAYG</label>
</RecordType>