force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/recordTypes/tc9_pr__Withholding_Student_Loans.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Withholding_Student_Loans</fullName>
    <active>true</active>
    <label>Withholding - Student Loans</label>
</RecordType>