force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/recordTypes/tc9_pr__Withholding_Superannuation.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Withholding_Superannuation</fullName>
    <active>true</active>
    <description>Used to define Opening Balances that should be considered as Superannuation withholding during payrun calculation</description>
    <label>Withholding - Superannuation</label>
</RecordType>