force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/recordTypes/tc9_pr__Withholding_UK_PAYE.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Withholding_UK_PAYE</fullName>
    <active>true</active>
    <label>Withholding - UK - PAYE</label>
</RecordType>