force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/recordTypes/tc9_pr__Withholding_VAT.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Withholding_VAT</fullName>
    <active>true</active>
    <label>Withholding - VAT</label>
</RecordType>