force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Payee__c</columns>
    <columns>tc9_pr__Pay_Code__c</columns>
    <columns>tc9_pr__MTD_Units__c</columns>
    <columns>tc9_pr__MTD_Value__c</columns>
    <columns>tc9_pr__QTD_Units__c</columns>
    <columns>tc9_pr__QTD_Value__c</columns>
    <columns>tc9_pr__YTD_Units__c</columns>
    <columns>tc9_pr__YTD_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>