force-app/main/default/objects/tc9_pr__Payee_Opening_Balance__c/listViews/tc9_pr__Leave_Opening_Balances.listView-meta.xml
<ListView>
    <fullName>tc9_pr__Leave_Opening_Balances</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_pr__Employee__c</columns>
    <columns>tc9_pr__Payee__c</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Effective_Date__c</columns>
    <columns>tc9_pr__Pay_Code__c</columns>
    <columns>tc9_pr__Leave_Rule__c</columns>
    <columns>tc9_pr__Payee_Leave_Rule__c</columns>
    <columns>tc9_pr__Leave_Balance_Units__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>tc9_pr__Payee_Opening_Balance__c.tc9_pr__Leave</value>
    </filters>
    <label>Leave Opening Balances</label>
</ListView>